cabal-version:       2.2
name:                List
version:             0.1
author:              Robert Imschweiler
maintainer:          ro-i@posteo.de
build-type:          Simple

common common-all
  default-language:    Haskell2010
  build-depends:       base == 4.*, QuickCheck, containers

library
  import:              common-all
  hs-source-dirs:      src/
  exposed-modules:     List
